--- a/empty_notebook.ipynb
+++ b/empty_notebook.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -434,6 +434,27 @@
         "normalizer = MacenkoNormalizer()\n",
         "normalizer.fit(cp.asarray(img))\n",
         "img_normalized = normalizer.normalize()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "x = np.random.randint(0, 256, (1, 3, 150, 150)).astype(cp.uint8)\n",
+        "x.shape[1]"
       ]
     }
   ],
